--- a/static/json/languages/fr_FR.json
+++ b/static/json/languages/fr_FR.json
@@ -419,6 +419,11 @@
       "pending": "Enchérissant",
       "confirmed": "Offre",
       "failed": "Offre échouée"
+    },
+    "speed_up": {
+      "pending": "Accélération en cours",
+      "confirmed": "Accéléré",
+      "failed": "Échec de l'accélération"
     }
   },
   "command_k": {
@@ -427,6 +432,7 @@
       "open": "Ouvrir",
       "open_in_new_tab": "Ouvrir dans un nouvel onglet",
       "switch_to_wallet": "Changer de portefeuille",
+      "send_to_contact": "Envoyer au contact",
       "view": "Voir"
     },
     "commands": {
@@ -434,6 +440,7 @@
         "send": "Envoyer",
         "swap": "Échanger",
         "my_wallets": "Mes portefeuilles",
+        "my_contacts": "Mes contacts",
         "my_tokens": "Mes jetons",
         "my_tokens_watched": "Jetons",
         "my_nfts": "Mes NFTs",
@@ -473,8 +480,12 @@
         "add_as_watched_wallet": "Surveiller ce portefeuille",
         "view_on_ens": "Afficher sur ENS",
         "switch_to_wallet": "Passer à ce portefeuille",
+        "send_to_wallet": "Envoyer à ce portefeuille",
+        "add_contact": "Ajouter comme contact",
+        "remove_contact": "Supprimer le contact",
         "copy_wallet_address": "Copier l'adresse",
         "view_wallet_on_etherscan": "Afficher sur Etherscan",
+        "send_contact": "Envoyer au contact",
         "export_addresses_as_csv": "Exporter les adresses au format CSV",
         "enable_flashbots": "Activer Flashbots",
         "disable_flashbots": "Désactiver Flashbots"
@@ -482,6 +493,7 @@
       "search_tags": {
         "swap": "pont",
         "my_wallets": "changer",
+        "my_contacts": "contact, contacts",
         "my_tokens_watched": "mes",
         "my_nfts_watched": "mes",
         "view_profile": "profil, galerie, ens, nfts",
@@ -519,6 +531,10 @@
       "title_hidden": "Soldes faibles cachés",
       "title_revealed": "Affichage des soldes faibles"
     },
+    "contact_toast": {
+      "title_added": "Contact ajouté",
+      "title_removed": "Contact supprimé"
+    },
     "no_results": "Aucun résultat",
     "pages": {
       "add_wallet": {
@@ -544,6 +560,10 @@
         "search_placeholder": "Sélectionnez un portefeuille pour basculer vers…",
         "section_title": "Mes portefeuilles"
       },
+      "my_contacts": {
+        "search_placeholder": "Sélectionnez un contact à envoyer à…",
+        "section_title": "Mes contacts"
+      },
       "token_detail": {
         "search_placeholder": "Rechercher des actions de jetons…",
         "section_title": "Actions"
@@ -556,6 +576,9 @@
         "search_placeholder": "Rechercher des actions de portefeuille…",
         "section_title": "Actions"
       }
+    },
+    "labels": {
+      "contact": "Contactez"
     },
     "quick_promo": {
       "text": "Appuyez sur %{modifierSymbol}K pour ouvrir le Menu Magique",
@@ -1301,6 +1324,8 @@
   "nfts": {
     "empty_state_header": "NFTs",
     "empty_state_description": "Vos NFT apparaîtront ici !",
+    "report_nft_action_text": "Signaler",
+    "report_nft_confirm_description": "Confirmer le signalement de NFT?",
     "view_on_web": "Voir sur le Web",
     "display_mode_gallery": "Galerie",
     "display_mode_collections": "Collections",
@@ -1351,7 +1376,9 @@
       "view_gallery": "Voir la galerie"
     },
     "toast": {
-      "spam_reported": "Votre signalement a été reçu !"
+      "spam_reported": "Votre signalement a été reçu !",
+      "hidden": "NFT masqué",
+      "unhidden": "NFT non masqué"
     }
   },
   "points": {
@@ -1447,7 +1474,11 @@
     "speed_up_transaction": "Accélérer la transaction",
     "close_cta": "Annuler",
     "handle_copy_title": "Hachage de la transaction copié",
-    "revoke_approval": "Révoquer l'autorisation"
+    "revoke_approval": "Révoquer l'autorisation",
+    "speed_up_failed": {
+      "title": "Échec de l'accélération",
+      "description": "Les tentatives d'accélération d'une transaction peuvent échouer en cas de congestion du réseau, d'augmentation de la limite de gaz, ou si la transaction originale est confirmée en premier"
+    }
   },
   "token_details": {
     "swap": "Échanger",
@@ -1616,6 +1647,7 @@
   },
   "alert": {
     "ok": "Ok",
+    "cancel": "Annuler",
     "wallet_watching_mode": "Ce portefeuille est actuellement en mode 'Observation'",
     "wallet_testing_mode": "Les Testnets ne sont pas pris en charge par Swap. Désactivez le mode Testnet pour continuer.",
     "coming_soon": "Bientôt disponible !",
