--- a/static/json/languages/id_ID.json
+++ b/static/json/languages/id_ID.json
@@ -419,6 +419,11 @@
       "pending": "Menawar",
       "confirmed": "Tawaran",
       "failed": "Tawaran Gagal"
+    },
+    "speed_up": {
+      "pending": "Mempercepat",
+      "confirmed": "Dipercepat",
+      "failed": "Percepatan Gagal"
     }
   },
   "command_k": {
@@ -427,6 +432,7 @@
       "open": "Buka",
       "open_in_new_tab": "Buka di Tab Baru",
       "switch_to_wallet": "Pindah ke Wallet",
+      "send_to_contact": "Kirim ke Kontak",
       "view": "Lihat"
     },
     "commands": {
@@ -434,6 +440,7 @@
         "send": "Kirim",
         "swap": "Tukar",
         "my_wallets": "Dompet Saya",
+        "my_contacts": "Kontak Saya",
         "my_tokens": "Token Saya",
         "my_tokens_watched": "Tokens",
         "my_nfts": "NFT Saya",
@@ -473,8 +480,12 @@
         "add_as_watched_wallet": "Pantau Dompet Ini",
         "view_on_ens": "Lihat pada ENS",
         "switch_to_wallet": "Alihkan ke Dompet Ini",
+        "send_to_wallet": "Kirim ke Dompet Ini",
+        "add_contact": "Tambahkan sebagai Kontak",
+        "remove_contact": "Hapus kontak",
         "copy_wallet_address": "Salin Alamat",
         "view_wallet_on_etherscan": "Lihat di Etherscan",
+        "send_contact": "Kirim ke Kontak",
         "export_addresses_as_csv": "Ekspor Alamat sebagai CSV",
         "enable_flashbots": "Aktifkan Flashbots",
         "disable_flashbots": "Nonaktifkan Flashbots"
@@ -482,6 +493,7 @@
       "search_tags": {
         "swap": "jembatan",
         "my_wallets": "beralih",
+        "my_contacts": "kontak, kontak-kontak",
         "my_tokens_watched": "saya",
         "my_nfts_watched": "saya",
         "view_profile": "profil, galeri, ens, nfts",
@@ -519,6 +531,10 @@
       "title_hidden": "Saldo Kecil Tersembunyi",
       "title_revealed": "Menunjukkan Saldo Kecil"
     },
+    "contact_toast": {
+      "title_added": "Kontak Ditambahkan",
+      "title_removed": "Kontak Dihapus"
+    },
     "no_results": "Tidak ada hasil",
     "pages": {
       "add_wallet": {
@@ -544,6 +560,10 @@
         "search_placeholder": "Pilih dompet untuk beralih ke…",
         "section_title": "Dompet Saya"
       },
+      "my_contacts": {
+        "search_placeholder": "Pilih kontak untuk dikirim ke…",
+        "section_title": "Kontak Saya"
+      },
       "token_detail": {
         "search_placeholder": "Cari aksi token…",
         "section_title": "Tindakan"
@@ -556,6 +576,9 @@
         "search_placeholder": "Cari aksi dompet…",
         "section_title": "Tindakan"
       }
+    },
+    "labels": {
+      "contact": "Kontak"
     },
     "quick_promo": {
       "text": "Tekan %{modifierSymbol}K untuk membuka Menu Sihir",
@@ -1301,6 +1324,8 @@
   "nfts": {
     "empty_state_header": "NFTs",
     "empty_state_description": "NFT Anda akan muncul di sini!",
+    "report_nft_action_text": "Laporkan",
+    "report_nft_confirm_description": "Konfirmasi pelaporan NFT?",
     "view_on_web": "Lihat di Web",
     "display_mode_gallery": "Galeri",
     "display_mode_collections": "Koleksi",
@@ -1351,7 +1376,9 @@
       "view_gallery": "Lihat Galeri"
     },
     "toast": {
-      "spam_reported": "Laporan Anda telah diterima!"
+      "spam_reported": "Laporan Anda telah diterima!",
+      "hidden": "NFT disembunyikan",
+      "unhidden": "NFT ditampilkan kembali"
     }
   },
   "points": {
@@ -1447,7 +1474,11 @@
     "speed_up_transaction": "Percepat transaksi",
     "close_cta": "Batal",
     "handle_copy_title": "Tx Hash Tersalin",
-    "revoke_approval": "Cabut Persetujuan"
+    "revoke_approval": "Cabut Persetujuan",
+    "speed_up_failed": {
+      "title": "Percepatan gagal",
+      "description": "Usaha untuk mempercepat transaksi dapat gagal selama kemacetan jaringan, peningkatan batas gas, atau ketika transaksi asli dikonfirmasi lebih dahulu"
+    }
   },
   "token_details": {
     "swap": "Tukar",
@@ -1616,6 +1647,7 @@
   },
   "alert": {
     "ok": "Ok",
+    "cancel": "Batal",
     "wallet_watching_mode": "Dompet ini saat ini dalam mode 'Watching'",
     "wallet_testing_mode": "Testnet tidak didukung oleh Swap. Nonaktifkan Mode Testnet untuk melanjutkan.",
     "coming_soon": "Segera Hadir!",
