--- a/static/json/languages/ja_JP.json
+++ b/static/json/languages/ja_JP.json
@@ -419,6 +419,11 @@
       "pending": "入札中",
       "confirmed": "入札",
       "failed": "入札失敗"
+    },
+    "speed_up": {
+      "pending": "スピードアップ中",
+      "confirmed": "スピードアップしました",
+      "failed": "スピードアップ失敗"
     }
   },
   "command_k": {
@@ -427,6 +432,7 @@
       "open": "開く",
       "open_in_new_tab": "新しいタブで開く",
       "switch_to_wallet": "ウォレットに切り替える",
+      "send_to_contact": "連絡先に送信",
       "view": "表示"
     },
     "commands": {
@@ -434,6 +440,7 @@
         "send": "送信する",
         "swap": "スワップ",
         "my_wallets": "マイウォレット",
+        "my_contacts": "連絡先",
         "my_tokens": "マイトークン",
         "my_tokens_watched": "トークン",
         "my_nfts": "私のNFT",
@@ -473,8 +480,12 @@
         "add_as_watched_wallet": "このウォレットを監視",
         "view_on_ens": "ENSで表示",
         "switch_to_wallet": "このウォレットに切り替え",
+        "send_to_wallet": "このウォレットに送金",
+        "add_contact": "連絡先として追加",
+        "remove_contact": "連絡先を削除する",
         "copy_wallet_address": "アドレスをコピー",
         "view_wallet_on_etherscan": "Etherscanで表示",
+        "send_contact": "連絡先に送信",
         "export_addresses_as_csv": "アドレスをCSVとしてエクスポート",
         "enable_flashbots": "Flashbotsを有効にする",
         "disable_flashbots": "Flashbotsを無効にする"
@@ -482,6 +493,7 @@
       "search_tags": {
         "swap": "ブリッジ",
         "my_wallets": "切り替え",
+        "my_contacts": "連絡先, 連絡先",
         "my_tokens_watched": "マイ",
         "my_nfts_watched": "マイ",
         "view_profile": "プロフィール, ギャラリー, ENS, NFT",
@@ -519,6 +531,10 @@
       "title_hidden": "小額残高非表示",
       "title_revealed": "小額残高表示中"
     },
+    "contact_toast": {
+      "title_added": "連絡先を追加しました",
+      "title_removed": "連絡先を削除しました"
+    },
     "no_results": "結果がありません",
     "pages": {
       "add_wallet": {
@@ -544,6 +560,10 @@
         "search_placeholder": "切り替えるウォレットを選択…",
         "section_title": "マイウォレット"
       },
+      "my_contacts": {
+        "search_placeholder": "送信する連絡先を選択…",
+        "section_title": "連絡先"
+      },
       "token_detail": {
         "search_placeholder": "トークンアクションを検索する…",
         "section_title": "アクション"
@@ -556,6 +576,9 @@
         "search_placeholder": "ウォレットアクションを検索する…",
         "section_title": "アクション"
       }
+    },
+    "labels": {
+      "contact": "お問い合わせ"
     },
     "quick_promo": {
       "text": "マジックメニューを開くには %{modifierSymbol}K を押します",
@@ -1301,6 +1324,8 @@
   "nfts": {
     "empty_state_header": "NFTs",
     "empty_state_description": "あなたのNFTがここに表示されます！",
+    "report_nft_action_text": "報告する",
+    "report_nft_confirm_description": "NFTを報告しますか？",
     "view_on_web": "ウェブで見る",
     "display_mode_gallery": "ギャラリー",
     "display_mode_collections": "コレクション",
@@ -1351,7 +1376,9 @@
       "view_gallery": "ギャラリーを見る"
     },
     "toast": {
-      "spam_reported": "報告を受け付けました！"
+      "spam_reported": "報告を受け付けました！",
+      "hidden": "NFTが非表示になりました",
+      "unhidden": "NFTが再表示されました"
     }
   },
   "points": {
@@ -1447,7 +1474,11 @@
     "speed_up_transaction": "トランザクションの処理速度を上げる",
     "close_cta": "キャンセル",
     "handle_copy_title": "Txハッシュがコピーされました",
-    "revoke_approval": "承認を取り消す"
+    "revoke_approval": "承認を取り消す",
+    "speed_up_failed": {
+      "title": "スピードアップ失敗",
+      "description": "トランザクションをスピードアップする試みは、ネットワークの混雑、ガス制限の増加、または元のトランザクションが先に確認されたときに失敗する可能性があります"
+    }
   },
   "token_details": {
     "swap": "スワップ",
@@ -1616,6 +1647,7 @@
   },
   "alert": {
     "ok": "OK",
+    "cancel": "キャンセル",
     "wallet_watching_mode": "このウォレットは現在「ウォッチモード」です",
     "wallet_testing_mode": "テストネットはSwapに対応していません。続行するにはテストネットモードを無効化してください。",
     "coming_soon": "近日公開予定です！",
